ingress/name-based/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: men-app-ingress
  labels:
    name: men-app-ingress
spec:
  rules:
  - host: home.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: men-app-home
            port: 
              number: 80
  - host: mobile.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: men-app-mobile
            port: 
              number: 80
